tests/error/initializing_empty_struct.c
// fail "Cannot initalize an empty structure with non-empty initializer-list."
struct {} x = { 10 };
